# ingress-collector

./: .dockerignore  .gitignore  Dockerfile  README.md  check-proxy.py  docker-compose.yml  entrypoint.sh  kafka_consumer.py  kafka_producer.py  kube.py  main.py  naiserator-gcp.yml  naiserator.yml  naiserator_prod-sbs_prod-fss.yml  network_policy.yml  prestart.sh  pyproject.toml  requirements.txt  topic.yml  up.sh
.github/workflows/: default.yml
.nais/: alerts.yaml  dev-fss.json  dev-gcp.json  dev-sbs.json  labs-gcp.json  nais.yaml  prod-fss.json  prod-gcp.json  prod-sbs.json  topic.yaml
collector/: __init__.py  confluent_kafka_producer.py  fetch.py  kafka_producer.py  kube_api.py  metrics.py  nais.py  nais_stream.py  utils.py
kafka_producer/: kafka_producer.py
tests/: test_fetch.py  test_no_proxy_fixer.py
