[tool.poetry]
name = "ingress-collector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kubernetes = "^11.0.0"
json_logging = "^1.2.8"
pytest-cov = "^2.10.1"
pyjwt = "fastapi"
requests = "^2.24.0"
uvicorn = "^0.11.8"
kafka-python = "^2.0.1"
confluent_kafka = "^1.5.0"
responses = "^0.12.0"

[tool.poetry.dev-dependencies]
fastapi = "^0.61.1"
requests = "responses"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
